--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/actualizaractividad.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/actualizaractividad.html.twig
@@ -28,29 +28,11 @@ $( "#actividades h3" ).css("opacity","0.4");
 	
 	{% block downSection  %}
 	<div class="downSection" style="padding:30px">
-		<div class="inform" style="height:500px;">
+		<div class="inform">
 			<form action="{{ path('usuario_actualizar_actividad', { 'id': actividad.id }) }}" method="post" {{ form_enctype(formulario) }}>
 				<div>{{ form_errors(formulario) }}</div>
 
 				<div class="profileFormContainer">
-
-					<div class="inputContainer" style="width:450px;">	
-						<h2>{{ form_label(formulario.mentor) }}</h2>
-						<div class="input"> 
-							{{ form_widget(formulario.mentor, {'attr': {'class':'mediano'}} ) }}
-							{{ form_errors(formulario.mentor) }}
-						</div>
-					</div>
-
-
-					<div class="inputContainer" style="width:450px;">	
-						<h2>{{ form_label(formulario.email) }}</h2>
-						<div class="input"> 
-							{{ form_widget(formulario.email, {'attr': {'class':'mediano'}} ) }}
-							{{ form_errors(formulario.email) }}
-						</div>
-					</div>
-
 					<div class="inputContainer" style="width:450px;">	
 						<h2>{{ form_label(formulario.nombre) }}</h2>
 						<div class="input"> 
@@ -75,13 +57,28 @@ $( "#actividades h3" ).css("opacity","0.4");
 							{{ form_errors(formulario.dirigida) }}
 						</div>
 					</div>
-
 					
 					<div class="inputContainer" style="width:450px;">	
 						<h2>{{ form_label(formulario.descripcion) }}</h2>
 						<div class="input"> 
 							{{ form_widget(formulario.descripcion, {'attr': {'class':'mediano'}} ) }}
 							{{ form_errors(formulario.descripcion) }}
+						</div>
+					</div>
+                    
+					<div class="inputContainer" style="width:450px;">	
+						<h2>{{ form_label(formulario.mentor) }}</h2>
+						<div class="input"> 
+							{{ form_widget(formulario.mentor, {'attr': {'class':'mediano'}} ) }}
+							{{ form_errors(formulario.mentor) }}
+						</div>
+					</div>
+
+					<div class="inputContainer" style="width:450px;">	
+						<h2>{{ form_label(formulario.email) }}</h2>
+						<div class="input"> 
+							{{ form_widget(formulario.email, {'attr': {'class':'mediano'}} ) }}
+							{{ form_errors(formulario.email) }}
 						</div>
 					</div>
 
@@ -92,6 +89,14 @@ $( "#actividades h3" ).css("opacity","0.4");
 							{{ form_errors(formulario.horario) }}
 						</div>
 					</div>
+                    
+        			<div class="inputContainer" style="width:450px;">	
+						<h2>{{ form_label(formulario.espacio) }}</h2>
+						<div class="input"> 
+							{{ form_widget(formulario.espacio, {'attr': {'class':'mediano'}} ) }}
+							{{ form_errors(formulario.espacio) }}
+						</div>
+                    </div>
 
 					<div class="inputContainer" style="width:450px;">	
 						<h2>{{ form_label(formulario.url) }}</h2>
@@ -117,7 +122,7 @@ $( "#actividades h3" ).css("opacity","0.4");
 						</div>
 					</div>
 					<div class="inputContainer" style="width:450px;">	
-						<h2 style="width:450px;">Contribución al desarrollo de competencias:</h2>
+						<h2 style="width:450px;">Competencias:</h2>
 					</div>
 					
 					<div class="inputContainer">	
@@ -141,9 +146,17 @@ $( "#actividades h3" ).css("opacity","0.4");
 							{{ form_errors(formulario.pensamiento) }}
 						</div>
 					</div>
+        
+                    <div class="inputContainer">	
+						<h2>{{ form_label(formulario.comunicacion) }}</h2>
+						<div class="input">
+							{{ form_widget(formulario.comunicacion, {'attr': {'class':'corto'}} ) }}
+							{{ form_errors(formulario.comunicacion) }}
+						</div>
+					</div>
 
 					<div class="inputContainer" style="width:450px;">	
-						<h2 style="width:450px;">Contribución al pensamiento de principios axiológicos:</h2>
+						<h2 style="width:450px;">Principios y valores:</h2>
 					</div>
 
 					<div class="inputContainer">	
@@ -211,6 +224,13 @@ $( "#actividades h3" ).css("opacity","0.4");
 						</div>
 					</div>
 
+                    <div class="inputContainer" style="width:600px;">	
+						<h2>{{ form_label(formulario.recomendacion) }}</h2>
+						<div class="input"> 
+							{{ form_widget(formulario.recomendacion, {'attr': {'class':'mediano'}} ) }}
+							{{ form_errors(formulario.recomendacion) }}
+						</div>
+					</div>
 
 					<div class="inputContainer" style="margin-top:20px; margin-left:-10px; width:auto !important">
 						<div style="position:relative; float:right">
@@ -220,7 +240,6 @@ $( "#actividades h3" ).css("opacity","0.4");
 						</div>
 					</div>
 
-					
 				</div><!--profileForContainer -->
 				{{ form_rest(formulario) }}
 			</form>
